--- a/dapp/public/manifest.json
+++ b/dapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Bitcoin Fork Explorer",
+  "name": "Bitcoin Fork Explorer for BTC-Relay",
   "icons": [
     {
       "src": "favicon.ico",
