--- a/relay/package.json
+++ b/relay/package.json
@@ -3,16 +3,30 @@
   "version": "1.0.0",
   "description": "A minimally mocked BTC relay.",
   "main": "index.ts",
+  "scripts": {
+    "hardhat": "hardhat node",
+    "build": "hardhat compile && hardhat typechain",
+    "deploy": "hardhat run scripts/deploy.ts"
+  },
   "author": "Interlay",
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.11",
     "chai": "^4.2.0",
+    "ethers": "^5.0.0",
     "hardhat": "^2.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "@typechain/ethers-v5": "^5.0.0",
+    "hardhat-typechain": "^0.3.3",
+    "ts-generator": "^0.1.1",
+    "typechain": "^4.0.1"
   }
 }
