--- a/dapp/package.json
+++ b/dapp/package.json
@@ -16,9 +16,9 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "relay": "link:./../relay",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4",
-    "relay": "../relay"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
