--- a/relay/package.json
+++ b/relay/package.json
@@ -8,7 +8,7 @@
     "hardhat": "hardhat node",
     "build": "hardhat compile && hardhat typechain && yarn tsc",
     "deploy": "hardhat run scripts/deploy.ts --network localhost",
-    "tsc": "tsc && cp typechain/*.d.ts dist/typechain/"
+    "tsc": "tsc -p . && cp typechain/*.d.ts dist/typechain/"
   },
   "author": "Interlay",
   "license": "MIT",
@@ -16,19 +16,20 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.11",
     "chai": "^4.2.0",
-    "ts-node": "^9.1.1",
     "hardhat": "^2.0.4",
-    "typechain": "^4.0.1",
     "hardhat-typechain": "^0.3.3",
-    "@typechain/ethers-v5": "^5.0.0",
     "ts-generator": "^0.1.1",
+    "ts-node": "^9.1.1",
+    "typechain": "^4.0.1",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@ethersproject/contracts": "^5.0.8",
     "ethers": "^5.0.0"
   },
   "files": [
