--- a/relay/package.json
+++ b/relay/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@ethersproject/contracts": "^5.0.8",
+    "@metamask/detect-provider": "^1.2.0",
     "ethers": "^5.0.0"
   },
   "files": [
