--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.5.3",
     "clsx": "^1.1.1",
     "node-sass": "4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "relay": "link:./../relay",
     "typescript": "^4.0.3",
