--- a/dapp/package.json
+++ b/dapp/package.json
@@ -27,13 +27,20 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore .",
+    "lint-fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx)": [
+      "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore .",
+      "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": {
     "production": [
@@ -46,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.14.0",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4"
   }
 }
