--- a/dapp/package.json
+++ b/dapp/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "eslint-config-google": "^0.14.0",
     "husky": "v4.3.8",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "typescript-plugin-css-modules": "^3.2.0"
   }
 }
