--- a/dapp/package.json
+++ b/dapp/package.json
@@ -28,12 +28,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore .",
-    "lint-fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx --ignore-path .eslintignore .",
+    "lint-fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .eslintignore ."
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
-      "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore ."
+      "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .eslintignore ."
     ]
   },
   "husky": {
@@ -56,7 +56,6 @@
   "devDependencies": {
     "eslint-config-google": "^0.14.0",
     "husky": "v4.3.8",
-    "lint-staged": "^10.5.4",
-    "typescript-plugin-css-modules": "^3.2.0"
+    "lint-staged": "^10.5.4"
   }
 }
