--- a/dapp/tsconfig.json
+++ b/dapp/tsconfig.json
@@ -19,8 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "baseUrl": "src"
   },
   "include": [
     "src"
