--- a/dapp/package.json
+++ b/dapp/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-d3-tree": "^2.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
