--- a/dapp/.vscode/settings.json
+++ b/dapp/.vscode/settings.json
@@ -1,12 +1,20 @@
 {
   "cSpell.words": [
+    "TODOs",
     "TTFB",
     "browserslist",
     "clsx",
+    "componentization",
+    "componentizing",
     "eqeqeq",
     "eslintignore",
     "hocs",
-    "nonwords"
+    "nonwords",
+    "preprocessors",
+    "quicklink",
+    "realfavicongenerator",
+    "tailwindcss",
+    "xstate"
   ],
   "typescript.tsdk": "./node_modules/typescript/lib"
 }
