--- a/dapp/package.json
+++ b/dapp/package.json
@@ -55,5 +55,6 @@
     "eslint-config-google": "^0.14.0",
     "husky": "v4.3.8",
     "lint-staged": "^10.5.4"
-  }
+  },
+  "engines": { "node": "16.x" }
 }
