--- a/dapp/package.json
+++ b/dapp/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
     "clsx": "^1.1.1",
+    "query-string": "7",
     "react": "^17.0.1",
     "react-d3-tree": "^2.0.1",
     "react-dom": "^17.0.1",
