--- a/dapp/package.json
+++ b/dapp/package.json
@@ -24,9 +24,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "yarn --cwd ../relay install --production=false --frozen-lockfile --non-interactive && yarn --cwd ../relay build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "postinstall": "yarn --cwd ../relay install --production=false --frozen-lockfile --non-interactive && yarn --cwd ../relay build",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx --ignore-path .eslintignore .",
     "lint-fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --ignore-path .eslintignore ."
   },
